--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-async-handler": "^1.2.0",
     "ircheck": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
-    "moment-timezone": "^0.5.38",
+    "moment-jalaali": "^0.9.6",
     "mongoose": "^6.6.3",
     "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.5",
